--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dayjs": "^1.11.5",
     "echarts": "^5.3.3",
     "element-ui": "^2.15.9",
+    "qrcode": "^1.5.1",
+    "qrcodejs2": "^0.0.2",
     "vue": "^2.6.14",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
