--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
     "echarts": "^5.3.3",
+    "element-china-area-data": "^6.0.0",
     "element-ui": "^2.15.9",
     "qrcode": "^1.5.1",
     "qrcodejs2": "^0.0.2",
